@@ -558,8 +558,7 @@ std::unique_ptr<GrD3DPipelineState> GrD3DPipelineStateBuilder::finalize() {
     this->finalizeShaders();
 
     SkSL::Program::Settings settings;
-    settings.fSharpenTextures =
-        this->gpu()->getContext()->priv().options().fSharpenMipmappedTextures;
+    settings.fSharpenTextures = true;
     settings.fRTFlipOffset = fUniformHandler.getRTFlipOffset();
     settings.fRTFlipBinding = 0;
     settings.fRTFlipSet = 0;
