@@ -6,6 +6,9 @@ Milestone 102
 -------------
   * Add glGetFloatv and glSamplerParameterf to GrGLInterface.
   * GrGLCreateNativeInterface is removed. Use GrGLMakeNativeInterface.
+  * GrContextOptions::fSharpenMipmappedTextures is ignored. MIP LOD is now always
+    biased on the GPU backend. The CPU backend implementation is modified to match
+    this behavior.
 
 * * *
 
